Fixed broken pre-wrap styles for .note-description

--- a/src/routes/home/components/note/note.scss
+++ b/src/routes/home/components/note/note.scss
@@ -38,11 +38,14 @@
 
     &-description {
       padding: 10px;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
       white-space: pre-wrap;
       word-break: break-all;
+
+      &.is-editing {
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+      }
 
       &-control {
         flex-grow: 1;
